immich/immich-machine-learning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/part-of: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
      app.kubernetes.io/part-of: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
        app.kubernetes.io/part-of: immich
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.2.4
          ports:
            - containerPort: 3003
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /cache
              name: cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-machine-learning
