immich/immich-machine-learning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/part-of: immich
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.5
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/part-of: immich
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
