immich/immich-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/part-of: immich
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
