immich/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: immich
spec:
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: immich
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
