immich/immich-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.albinmedoc.se`)
      kind: Rule
      services:
        - name: immich
          port: 2283
